--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
               <li class="nav-item">
                 <a href="contact.html" data-type="page-transition">
                   <span class="ms-btn">contact</span>
-                  <span class="nav-item__label">Get in touch</span>
+                  <span class="nav-item__label">Get in touch!</span>
                 </a>
               </li>
             </ul>
